--- a/.github/workflows/test_proxies.yml
+++ b/.github/workflows/test_proxies.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Download nodes.yaml
       run: |
-        curl -o nodes.yaml https://github.com/HeFung/V2RaySub/blob/master/sub/sub_merge_yaml.yml
+        curl -o nodes.yaml https://raw.githubusercontent.com/HeFung/V2RaySub/refs/heads/master/sub/sub_merge_yaml.yml
 
     - name: Download Xray
       run: |
