--- a/.github/workflows/test_proxies.yml
+++ b/.github/workflows/test_proxies.yml
@@ -35,7 +35,9 @@ jobs:
         curl -o nodes_1.yaml https://raw.githubusercontent.com/HeFung/V2RaySub/refs/heads/master/sub/sub_merge_yaml.yml
         curl -o nodes_2.yaml https://raw.githubusercontent.com/imyaoxp/clashnode/refs/heads/main/sub/sub_merge_yaml.yml
         curl -o nodes_3.yaml https://raw.githubusercontent.com/mahdibland/V2RayAggregator/refs/heads/master/sub/sub_merge_yaml.yml
-        curl -o nodes_4.yaml https://raw.githubusercontent.com/mfuu/v2ray/refs/heads/master/merge/merge_clash.yaml
+        curl -o nodes_4.yaml https://raw.githubusercontent.com/SSgumS/V2RayAggregator/refs/heads/master/sub/sub_merge_yaml.yml
+        curl -o nodes_5.yaml https://raw.githubusercontent.com/mfuu/v2ray/refs/heads/master/merge/merge_clash.yaml
+        curl -o nodes_6.yaml https://raw.githubusercontent.com/vAHiD55555/Cross/refs/heads/master/sub/sub_merge_yaml.yml
 
     - name: Download Xray
       run: |
